# QFT-mapping

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  go.sum  package-lock.json  package.json  pyproject.toml
.github/workflows/: format.yaml  generate-device.yaml  typecheck.yaml
benchmark/OLSQ/: 16QBT_10CYC_TFL_3.qasm  16QBT_15CYC_TFL_1.qasm  4gt13_92.qasm  adder.qasm  barenco_tof_4_after_heavy.qasm  barenco_tof_5_after_heavy.qasm  or.qasm
benchmark/large/: 9symml_195.qasm  adr4_197.qasm  cm82a_208.qasm  cycle10_2_110.qasm  dc2_222.qasm  inc_237.qasm  qft_10.qasm  rd84_253.qasm  root_255.qasm  sqn_258.qasm  sqrt8_260.qasm  urf1_278.qasm  z4_268.qasm
benchmark/original/EDA_traditional/: convert2qasm.py  convert2qasm.sh  q1355_3npn.qasm  q1355_3npn_mcnc.qasm  q1355_mcnc.qasm  q1355_mcnc_q.qasm  q1355_xmg.qasm  q17_3npn.qasm  q17_3npn_mcnc.qasm  q17_mcnc.qasm  q17_mcnc_q.qasm  q1908_3npn.qasm  q1908_3npn_mcnc.qasm  q1908_mcnc.qasm  q1908_mcnc_q.qasm  q1908_xmg.qasm  q2670_3npn.qasm  q2670_3npn_mcnc.qasm  q2670_mcnc.qasm  q2670_mcnc_q.qasm  q2670_xmg.qasm  q3540_3npn.qasm  q3540_3npn_mcnc.qasm  q3540_mcnc.qasm  q3540_mcnc_q.qasm  q3540_xmg.qasm  q432_3npn.qasm  q432_3npn_mcnc.qasm  q432_mcnc.qasm  q432_mcnc_q.qasm  q432_xmg.qasm  q499_3npn.qasm  q499_3npn_mcnc.qasm  (+23 more)
benchmark/small/: 3_17_13.qasm  4mod5-v0_20.qasm  4mod5-v1_24.qasm  alu-v0_27.qasm  alu-v1_29.qasm  alu-v3_35.qasm  mod5d1_63.qasm  qft_4.qasm  rd32-v0_66.qasm
device/: 2n_8.json  2n_8.txt  IBMtopo.py  brooklyn_65.json  brooklyn_65.txt  convert2TOQM.py  convert2TOQM.sh  guadalupe_16.json  guadalupe_16.txt  kolkata_27.json  kolkata_27.txt  linear_5.json  linear_5.txt  linear_6.json  linear_6.txt  perth_7.json  perth_7.txt  quito_5.json  quito_5.txt  tokyo_20.json  tokyo_20.txt  topo_1121.json  topo_1121.txt  topo_11969.json  topo_11969.txt  topo_2129.json  topo_2129.txt  topo_3457.json  topo_3457.txt  topo_433.json  topo_433.txt  topo_5105.json  topo_5105.txt  topo_7073.json  topo_7073.txt  topo_9361.json  topo_9361.txt  washington_127.json  washington_127.txt
dio/evaluator/: test_topo.py
duostra/include/: args.h  qft_mapper.h
duostra/src/: device.cpp  main.cpp
eval/: convert_device.py  test_device.py  test_output.py  test_topo.py
evaluator/: __init__.py  test_device.py  test_output.py  test_topo.py
evaluator/converter/: __main__.py
evaluator/physical/: devices.py  operations.py
evaluator/topological/: gates.py  qft.py
include/: algorithm.h  device.h  qft_mapper.h  qft_topo  qft_topo.h
max_short_paths/: __init__.py  __main__.py  dep_graph.py  dependency_graph.py  device_graph.py  interfaces.py  shortest_path.py  test_dep.py  test_edge.py
max_short_paths/conf/: qft.yaml
max_short_paths/graph/: __init__.py  dep.py  dev.py
q/: main.go  types.go  utils.go
qft/: .gitignore  CMakeLists.txt  __init__.py  __main__.py  apsp.c++  apsp.h++
qft/common/: __init__.py  dicts.py  json.py  ops.py  progress.py  utils.py
qft/conf/: qft.yaml
qft/conf/init/: init.yaml
qft/controller/: interfaces.py
qft/controllers/: __init__.py  apsp.py  doustra.py  duostra.py  interfaces.py
qft/dependencies/: __init__.py  dependency.py  interfaces.py
qft/devices/: __init__.py  interfaces.py  physical.py
qft/devs/: __init__.py  interfaces.py  physical.py
qft/drivers/: __init__.py  interfaces.py  states.py
qft/dtplacer/: datasets.py  env.py  training.py
qft/duostra/: CMakeLists.txt  Makefile  README.md  __init__.py  config.json  config_sample.json  duostra.py  meson.build
qft/duostra/include/: algo.h  algo.hpp  apsp.hpp  checker.hpp  device.h  externals  flow.hpp  gate.hpp  module.h  operator.h  operator.hpp  pybind.hpp  q_device.h  q_device.hpp  qft_mapper.h  qft_mapper.hpp  qft_placer.hpp  qft_router.hpp  qft_scheduler.hpp  qft_topo.h  qft_topo.hpp  sa_place.hpp  stackoverflow_terminate.hpp  topo.h  topo.hpp  topo.tpp  tqdm.hpp  tqdm_wrapper.hpp  util.hpp
qft/duostra/src/: algo.cpp  apsp.cpp  bind.cpp  device.cpp  flow.cpp  main.cpp  meson.build  module.cpp  operator.cpp  q_device.cpp  qft_mapper.cpp  qft_router.cpp  qft_topo.cpp  stackoverflow_terminate.cpp  topo.cpp  tqdm.cpp  tqdm_wrapper.cpp
qft/duostra/src/placers/: base.cpp  dfs.cpp  random.cpp  static.cpp
qft/duostra/src/schedulers/: base.cpp  dora.cpp  greedy.cpp  onion.cpp  random.cpp  static.cpp
qft/duostra/subprojects/: libtorch.wrap  tqdm.wrap
qft/duostra/subprojects/packagefiles/torch/: meson.build
qft/duostra/subprojects/packagefiles/tqdm/: meson.build
qft/evaluator/: convert_device.py  generate_linear.py  parser.py  qasm2json.py  test_config.json  test_device.py  test_output.py
qft/evaluator/converter/: __main__.py
qft/evaluator/converter/conf/: converter.yaml
qft/evaluator/physical/: devices.py  operations.py  qubits.py
qft/evaluator/topological/: __init__.py  algo_topo.py  gates.py  qft.py  qft_topo.py  topo.py
qft/init/: __main__.py  datasets.py  progress.py
qft/libapsp/: CMakeLists.txt  apsp.c++  apsp.h++
qft/libapsp/libtorch/: build-hash  build-version
qft/libapsp/libtorch/include/caffe2/core/: macros.h
qft/libapsp/libtorch/share/cmake/Caffe2/: Caffe2Config.cmake  Caffe2Targets.cmake
qft/libapsp/libtorch/share/cmake/Torch/: TorchConfig.cmake
qft/libtorch/: build-version
qft/max_short_paths/: test_dep.py  test_edge.py
qft/max_short_paths/conf/: qft.yaml
qft/max_short_paths/graph/: dep.py  dev.py
qft/routers/: __init__.py  apsp.py  doustra.py  duostra.py  interfaces.py
qft/schedulers/: __init__.py  baselines.py  distances.py  duostra.py  greedy.py  interfaces.py  naive.py
qft/tests/: test_dependency.py
qft_synthesis/: q_127.qasm  q_5.qasm  q_7.qasm
src/: algorithm.cpp  device.cpp  main.cpp  main.py  qft_mapper.cpp  qft_topo.cpp
test/: test_device.py  test_output.py  test_topo.py
utils/: calculate_info.py  modify.py  run_benchmark.sh  run_benchmark_greedy.sh  run_benchmark_search.sh  run_oracle.sh  run_oracle_greedy.sh  run_oracle_search.sh
utils/table_benchmark/: construct.py  table.txt
utils/table_oracle/: construct.py  info.txt  table.txt
(+134 files in other folders)
